scrollbar fix

--- a/docstream/styles/main.css
+++ b/docstream/styles/main.css
@@ -13,6 +13,27 @@
     /* color: white; */
 }
 
+#style-2::-webkit-scrollbar-track
+{
+    
+	/* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); */
+	border-radius: 10px;
+	opacity: 0;
+}
+
+#style-2::-webkit-scrollbar
+{
+	width: 12px;
+	opacity: 0;
+}
+
+#style-2::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
+}
+
 .editsContainer-dark{
     background-color: #1b1a1a;
     color: rgb(222, 222, 222);
